# sap_cloud

./: .gitmodules  CMakeLists.txt
config/: sap_drive.example.toml
include/sap_cloud/: auth_manager.h  config.h  metadata.h  server.h
include/sap_cloud/services/: file_service.h  notes_service.h  sync_service.h
include/sap_cloud/storage/: metadata.h
src/: auth_manager.cpp  config.cpp  main.cpp  metadata.cpp  server.cpp
src/services/: file_service.cpp  notes_service.cpp  sync_service.cpp
src/storage/: metadata.cpp
tests/: CMakeLists.txt  drive_tests.cpp
